# movement_recognition

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  readmeme.md
app/: config.py  main.py
app/dao/: base.py  database.py  session_maker.py
app/migration/: env.py
app/migration/versions/: ee128dcc2ea3_initial.py
app/opencv_cam/: dao.py  metrics.py  models.py  router.py  schemas.py  video_analizer_controller.py
test/: conftest.py  test_router.py
