[project]
name = "video-analysis-service"
version = "0.1.0"
description = "Microservice for video analysis and movement detection"
authors = [
    {name = "Developer", email = "dev@example.com"}
]

dependencies = [
    "fastapi==0.104.1",
    "numpy<2",
    "uvicorn[standard]==0.24.0",
    "opencv-python==4.8.1.78",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "prometheus-client==0.19.0",
    "python-multipart==0.0.6",
    "alembic==1.12.1",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (==0.23.0)",
    "ruff (>=0.14.6,<0.15.0)",
]
requires-python = ">=3.11,<4.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"